adjust spacing and fonts, fix mobile

--- a/assets/scss/components/_document.scss
+++ b/assets/scss/components/_document.scss
@@ -1,8 +1,8 @@
 .Document {
-  padding: 1.5rem 2rem;
+  padding: 3rem;
 
   @include mq($until: navCollapse) {
-    padding: 1.25rem 1rem;
+    padding: 3rem 1rem;
   }
 }
 
