--- a/assets/scss/components/_header.scss
+++ b/assets/scss/components/_header.scss
@@ -3,21 +3,23 @@
   position: relative;
   z-index: 10;
   align-items: center;
+  justify-content: space-between;
   background-color: $color-header-background;
-  box-shadow: inset 0 -1px 0 0 rgba(black, 0.25), 0 2px 0 rgba(black, 0.1);
   color: $color-header-content;
   text-overflow: ellipsis;
 }
 
 .Header-title {
   @include link-default(inherit, none);
-  padding: 0.75rem 1rem;
+  @include font(title);
+  padding: 0.5rem 1rem;
   overflow: hidden;
-  font-size: 1.125rem; // 18px
-  font-weight: bold;
-  line-height: (24 / 18);
   text-overflow: ellipsis;
   white-space: nowrap;
+
+  @include mq(navCollapse) {
+    padding-right: 3rem;
+  }
 }
 
 .Header-button {
