--- a/assets/scss/core/_mixins.scss
+++ b/assets/scss/core/_mixins.scss
@@ -61,17 +61,22 @@
   @if $preset == title {
     font: bold 1.75rem /#{(32 / 28)} $font-family-sans-serif;
     font-feature-settings: 'dlig' 1;
-    letter-spacing: -0.025em;
+    letter-spacing: 0.025em;
+    text-transform: uppercase;
   }
 
   @if $preset == heading {
     font: bold 1.3125rem /#{(24 / 21)} $font-family-sans-serif;
     font-feature-settings: 'dlig' 1;
+    letter-spacing: 0.025em;
+    text-transform: uppercase;
   }
 
   @if $preset == subHeading {
     font: bold 1.125rem /#{(24 / 18)} $font-family-sans-serif;
     font-feature-settings: 'dlig' 1;
+    letter-spacing: 0.025em;
+    text-transform: uppercase;
   }
 
   @if $preset == body {
